[4.4.3. AjaxAuthenticationProvider] 코드 작성 완료

--- a/security-form-auth/src/main/resources/application.yml
+++ b/security-form-auth/src/main/resources/application.yml
@@ -33,7 +33,7 @@ spring:
   jpa:
     properties:
       hibernate:
-        ddl-auto: create
+        ddl-auto: update
         format_sql: true
         show_sql: true
         jdbc:
