--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'security'
 include 'security-common'
 include 'security-basic-api'
 include 'security-form-auth'
+include 'security-ajax-auth'
 
