--- a/security-db-auth/build.gradle
+++ b/security-db-auth/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.3.3.RELEASE'
+    id 'org.springframework.boot' version '2.2.11.RELEASE'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'java'
 }
@@ -30,14 +30,12 @@ dependencies {
     // https://mvnrepository.com/artifact/org.modelmapper/modelmapper
     implementation 'org.modelmapper:modelmapper:2.3.0'
 
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
 //    runtimeOnly 'org.postgresql:postgresql'
     /* h2 */
-    implementation 'com.h2database:h2'
+    runtimeOnly 'mysql:mysql-connector-java'
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
