--- a/security-db-auth/src/main/resources/application.yml
+++ b/security-db-auth/src/main/resources/application.yml
@@ -7,12 +7,13 @@ spring:
       restart:
         enabled: true
   profiles:
-    include: db
+    # db 설정 파일, local (logback 설정 파일)
+    include: db, local
 
 logging:
   level:
     root: info
+
     org:
       # SpringFramework Logging
       springframework: debug
-
